search/manifest-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysearch-service
spec:
  type: ClusterIP
  selector:
    app: search-app
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 3000
