search/manifest-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysearch-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: mysearch.techno028.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysearch-service
            port:
              number: 9090
